# ArtEZ-Notulist

./: .gitignore  README.md  index.html  package.json  vite.config.ts
.github/workflows/: build-windows.yml
config/: config.toml
docs/: INSTALL.md  voorbeeld_transcript.txt
installer/: ArtezNotulist.iss
installer/scripts/: install_deps.ps1
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: commands.rs  config.rs  lib.rs  logging.rs  main.rs
src-tauri/src/pipeline/: actions.rs  documents.rs  ffmpeg.rs  mod.rs  ollama.rs  whisper.rs
src/components/: LogPanel.tsx  ProgressBar.tsx  SettingsPanel.tsx
templates/: HUISSTIJL.md  notulen_prompt.md  pdf_style.css
