[package]
name = "artez-notulist"
version = "1.0.1"
description = "ArtEZ Notulist — lokale conceptnotulen voor het College van Bestuur"
authors = ["ArtEZ"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "artez_notulist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Ollama HTTP-client (lokaal, geen TLS nodig).
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
csv = "1"

[features]
# Standaard productiebuild.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
